--- a/arch/arm/dts/laguna-fpga.dts
+++ b/arch/arm/dts/laguna-fpga.dts
@@ -13,19 +13,23 @@
 #include <dt-bindings/clock/laguna-clock.h>
 
 #include "laguna-global-ctrl.dtsi"
-#ifdef CONFIG_CLK_AXERA_V1
-#include "laguna-fpga-clocks.dtsi"
-#include "laguna-cru.dtsi"
-#else
-#include "laguna-fpga-clocks-v2.dtsi"
+#include "laguna-clocks-fpga.dtsi"
+#ifdef CONFIG_CLK_AXERA_V2
 #include "laguna-cru-v2.dtsi"
+#else
+#include "laguna-cru.dtsi"
 #endif
+#include "laguna.dtsi"
+
+#if defined(CONFIG_LUA_SAFETY_INIT) && defined(CONFIG_CLK_AXERA_V2)
+#include "laguna-safety-clocks-fpga.dtsi"
+#include "laguna-safety-cru-v2.dtsi"
+#include "laguna-safety.dtsi"
+#endif
+
 / {
 	model = "Laguna FPGA Platform";
 	compatible = "axera,laguna-fpga";
-	#address-cells = <2>;
-	#size-cells = <2>;
-	interrupt-parent = <&gic>;
 
 	chosen {
 		stdout-path = "serial1";
@@ -35,206 +39,107 @@
 		reg = <0x1 0x00000000 0x2 0x00000000>;
 		device_type = "memory";
 	};
+};
 
-	aliases {
-//		serial0 = &serial0;
-		serial1 = &serial1;
-		serial2 = &serial2;
-		serial3 = &serial3;
-		serial4 = &serial4;
-		serial5 = &serial5;
-	};
+&periph_glb {
+	status = "okay";
+};
 
-	psci {
-		compatible = "arm,psci-0.2";
-		method = "smc";
-	};
-
-	gic: interrupt-controller@08000000 {
-		compatible = "arm,gic-400";
-		#interrupt-cells = <3>;
-		#address-cells = <2>;
-		#size-cells = <2>;
-		interrupt-controller;
-		reg = <0x0 0x08001000 0x0 0x1000>,
-			  <0x0 0x08002000 0x0 0x2000>;
-		interrupts = <GIC_PPI 9 IRQ_TYPE_LEVEL_HIGH>;
-	};
-
-	soc {
-		compatible = "simple-bus";
-		#address-cells = <2>;
-		#size-cells = <2>;
-		u-boot,dm-pre-reloc;
-		u-boot,dm-spl;
-		ranges;
-
-#if 0
-		serial0: uart@00602000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x00602000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			clock-frequency = <10000000>;
-			resets = <&safety_sysrst0 14>,
-					 <&safety_sysrst0 15>;
-			reset-names = "prst", "rst";
-			syscons = <&safety_uart_xfer_sel 0 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-		};
-#endif
-
-		serial1: uart@0E403000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x0E403000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			interrupts = <GIC_SPI 167 IRQ_TYPE_LEVEL_HIGH>;
-			clock-frequency = <10000000>;
-			resets = <&periph_sysrst0 PERIPH_UART1_SW_PRST>,
-					 <&periph_sysrst0 PERIPH_UART2_SW_PRST>;
-			reset-names = "prst", "rst";
-			syscons = <&uart_xfer_sel 0 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
+&serial1 {
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&clk_periph_uart1>, <&pclk_periph_uart1>;
-			clock-names = "clk_periph_uart1", "pclk_periph_uart1";
+	clocks = <&clk_periph_uart1>, <&pclk_periph_uart1>;
 #else
-			clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART1>,
-			         <&periph_clk_gate_0 CLK_PERIPH_UART1>;
-			clock-names = "pclk", "clk";
+	clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART1>,
+	         <&periph_clk_gate_0 CLK_PERIPH_UART1>;
 #endif
-			u-boot,dm-pre-reloc;
-			u-boot,dm-spl;
-			status = "okay";
-		};
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
 
-		serial2: uart@0E404000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x0E404000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			interrupts = <GIC_SPI 168 IRQ_TYPE_LEVEL_HIGH>;
-			clock-frequency = <10000000>;
-			resets = <&periph_sysrst0 PERIPH_UART2_SW_PRST>,
-					 <&periph_sysrst0 PERIPH_UART2_SW_PRST>;
-			reset-names = "prst", "rst";
-			syscons = <&uart_xfer_sel 2 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
+&serial2 {
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&clk_periph_uart2>, <&pclk_periph_uart2>;
-			clock-names = "clk_periph_uart2", "pclk_periph_uart2";
+	clocks = <&clk_periph_uart2>, <&pclk_periph_uart2>;
 #else
-			clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART2>,
-			         <&periph_clk_gate_0 CLK_PERIPH_UART2>;
-			clock-names = "pclk", "clk";
+	clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART2>,
+	         <&periph_clk_gate_0 CLK_PERIPH_UART2>;
 #endif
-			status = "okay";
-		};
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
 
-		serial3: uart@0E405000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x0E405000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			interrupts = <GIC_SPI 169 IRQ_TYPE_LEVEL_HIGH>;
-			clock-frequency = <10000000>;
-			resets = <&periph_sysrst0 PERIPH_UART3_SW_PRST>,
-					 <&periph_sysrst0 PERIPH_UART3_SW_PRST>;
-			reset-names = "prst", "rst";
-			syscons = <&uart_xfer_sel 4 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
+&serial3 {
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&clk_periph_uart3>, <&pclk_periph_uart3>;
-			clock-names = "clk_periph_uart3", "pclk_periph_uart3";
+	clocks = <&clk_periph_uart3>, <&pclk_periph_uart3>;
 #else
-			clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART3>,
-			         <&periph_clk_gate_0 CLK_PERIPH_UART3>;
-			clock-names = "pclk", "clk";
+	clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART3>,
+	         <&periph_clk_gate_0 CLK_PERIPH_UART3>;
 #endif
-			status = "okay";
-		};
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
 
-		serial4: uart@0E410000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x0E410000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			interrupts = <GIC_SPI 170 IRQ_TYPE_LEVEL_HIGH>;
-			clock-frequency = <10000000>;
-			resets = <&periph_sysrst0 PERIPH_UART4_SW_PRST>,
-					 <&periph_sysrst0 PERIPH_UART4_SW_PRST>;
-			reset-names = "prst", "rst";
-			syscons = <&uart_xfer_sel 6 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
+&serial4 {
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&clk_periph_uart4>, <&pclk_periph_uart4>;
-			clock-names = "clk_periph_uart4", "pclk_periph_uart4";
+	clocks = <&clk_periph_uart4>, <&pclk_periph_uart4>;
 #else
-			clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART4>,
-			         <&periph_clk_gate_0 CLK_PERIPH_UART4>;
-			clock-names = "pclk", "clk";
+	clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART4>,
+	         <&periph_clk_gate_0 CLK_PERIPH_UART4>;
 #endif
-			status = "okay";
-		};
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
 
-		serial5: uart@0E411000 {
-			compatible = "snps,dw-apb-uart";
-			reg = <0x0 0x0E411000 0x0 0x1000>;
-			reg-shift = <2>;
-			reg-io-width = <4>;
-			interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
-			clock-frequency = <10000000>;
-			resets = <&periph_sysrst0 PERIPH_UART5_SW_PRST>,
-					 <&periph_sysrst0 PERIPH_UART5_SW_PRST>;
-			reset-names = "prst", "rst";
-			syscons = <&uart_xfer_sel 8 UART_XFER_RS232_2LINE>;
-			syscon-names = "xfersel";
+&serial5 {
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&clk_periph_uart5>, <&pclk_periph_uart5>;
-			clock-names = "clk_periph_uart5", "pclk_periph_uart5";
+	clocks = <&clk_periph_uart5>, <&pclk_periph_uart5>;
 #else
-			clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART5>,
-			         <&periph_clk_gate_0 CLK_PERIPH_UART5>;
-			clock-names = "pclk", "clk";
+	clocks = <&periph_clk_gate_0 PCLK_PERIPH_UART5>,
+	         <&periph_clk_gate_0 CLK_PERIPH_UART5>;
 #endif
-			status = "okay";
-		};
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
 
-		eth0: ethernet@0E014000{
-			compatible = "axera,lua-dwmac-eqos";
-			reg = <0x0 0xE014000 0x0 0x4000>;
-			clock-frequency = <10000000>;
-			max-speed = <100>;
-			phy-handle = <&phy0>;
-			phy-mode = "gmii";
-			resets = <&periph_sysrst1 MAIN_EMAC_SW_ARST>;
-			reset-names = "arst";
+&eth1 {
+	phy-handle = <&phy0>;
+	status = "okay";
 #ifdef CONFIG_CLK_AXERA_V1
-			clocks = <&aclk_main_emac>, <&clk_periph_emac_ptp>,
-					 <&clk_main_ephy_ref>, <&clk_main_rmii_phy>,
-					 <&clk_main_rgmii_tx>;
-			clock-names = "aclk_eqos", "ptp_ref",
-						  "ephy_ref", "rmii_phy",
-						  "rgmii_tx";
+	clocks = <&aclk_main_emac>,
+	         <&clk_periph_emac_ptp>,
+	         <&clk_main_ephy_ref>,
+	         <&clk_main_rmii_phy>,
+	         <&clk_main_rgmii_tx>;
+#else
+	clocks = <&periph_clk_gate_1 ACLK_MAIN_EMAC>,
+	         <&periph_clk_mux_gate CLK_PERIPH_EMAC_PTP_EB>,
+	         <&periph_clk_mux_gate CLK_MAIN_EPHY_REF_EB>,
+	         <&periph_clk_mux_gate CLK_MAIN_RMII_PHY_EB>,
+	         <&periph_clk_mux_gate CLK_MAIN_RGMII_TX_EB>;
 #endif
-			axera,syscon-eth0 = <&periph_glb LAGUNA_SYSCON_PERIPH_EMAC>;
-			axera,syscon-pps = <&periph_glb LAGUNA_SYSCON_PERIPH_EMAC1>;
+	clock-names = "aclk_eqos", "ptp_ref",
+	              "ephy_ref", "rmii_phy",
+	              "rgmii_tx";
 
-			// axera,syscon-eth0 = <&periph_glb 0x24>,
-			// 					<&periph_glb 0x68>;
-
-			mdio {
-				#address-cells = <0x1>;
-				#size-cells = <0x0>;
-				phy0: phy@0 {
-					compatible = "Marvell 88E1111S";
-					device_type = "ethernet-phy";
-					reg = <0x0>;
-				};
-			};
+	mdio {
+		#address-cells = <0x1>;
+		#size-cells = <0x0>;
+		phy0: phy@0 {
+			compatible = "Marvell 88E1111S";
+			device_type = "ethernet-phy";
+			reg = <0x0>;
 		};
 	};
 };
+
+#if defined(CONFIG_LUA_SAFETY_INIT) && defined(CONFIG_CLK_AXERA_V2)
+&safety_glb {
+	status = "okay";
+};
+
+&serial0 {
+	clocks = <&safety_clk_gate_1 PCLK_SAFE_UART0>,
+	         <&safety_clk_gate_1 CLK_SAFE_UART0>;
+	clock-names = "apb_pclk", "baudclk";
+	status = "okay";
+};
+#endif
