--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -12,7 +12,7 @@ CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_DM_GPIO=y
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu-virt"
+CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu"
 CONFIG_SPL_TEXT_BASE=0x14000000
 CONFIG_SYS_PROMPT="LUA$ "
 CONFIG_SPL_SERIAL=y
@@ -173,6 +173,7 @@ CONFIG_MMC_SPEED_MODE_SET=y
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_OF_BOARD=y
+CONFIG_OF_SPL_REMOVE_PROPS="pinctrl-0 pinctrl-names clocks clock-names interrupt-parent interrupts"
 CONFIG_NET_RETRY_COUNT=20
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_KEEP_SERVERADDR=y
@@ -188,6 +189,11 @@ CONFIG_SPL_OF_TRANSLATE=y
 CONFIG_SPL_BLOCK_CACHE=y
 CONFIG_BOOTCOUNT_LIMIT=y
 CONFIG_DM_BOOTCOUNT=y
+CONFIG_CLK=y
+CONFIG_SPL_CLK=y
+CONFIG_SPL_CLK_CCF=y
+CONFIG_CLK_CCF=y
+CONFIG_CLK_AXERA=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x3090000000
 CONFIG_FASTBOOT_BUF_SIZE=0x10000000
