--- a/drivers/clk/axera/Makefile
+++ b/drivers/clk/axera/Makefile
@@ -4,5 +4,5 @@
 #
 
 obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-mux.o clk-gate.o
-obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-divider.o clk-pll.o
-obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-tree.o pll-ctrl.o
+obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-divider.o clk-fixed-factor.o
+# obj-$(CONFIG_$(SPL_TPL_)CLK_AXERA) += clk-pll.o
