--- a/arch/arm/dts/laguna-clocks.dtsi
+++ b/arch/arm/dts/laguna-clocks.dtsi
@@ -6,7 +6,7 @@
  */
 
 / {
-	main-clocks {
+	main_clocks {
 		compatible = "simple-bus";
 		#address-cells = <2>;
 		#size-cells = <2>;
@@ -405,16 +405,6 @@
 			clock-output-names = "clk_flash_24m";
 		};
 
-		periph_clk_main_rgmii_tx_div2: periph_clk_main_rgmii_tx_div2 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&periph_clk_mux CLK_MAIN_RGMII_TX>;
-			clock-names = "clk_main_rgmii_tx_mux";
-			clock-mult = <1>;
-			clock-div = <2>;
-			clock-output-names = "periph_clk_main_rgmii_tx_div2";
-		};
-
 		clk_periph_emac_ptp_div2: clk_periph_emac_ptp_div2 {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
@@ -443,6 +433,16 @@
 			clock-mult = <1>;
 			clock-div = <1>;
 			clock-output-names = "clk_periph_24m";
+		};
+
+		clk_cpu_24m: clk_cpu_24m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_24m>;
+			clock-names = "fab_pll_24m";
+			clock-mult = <1>;
+			clock-div = <1>;
+			clock-output-names = "clk_cpu_24m";
 		};
 	};
 };
