--- a/common/spl/Makefile
+++ b/common/spl/Makefile
@@ -37,4 +37,5 @@ obj-$(CONFIG_$(SPL_TPL_)USB_SDP_SUPPORT) += spl_sdp.o
 obj-$(CONFIG_$(SPL_TPL_)ANY_MTD) += spl_mtd.o
 obj-$(CONFIG_$(SPL_TPL_)MULTI_MTD) += spl_multi_mtd.o
 obj-$(CONFIG_$(SPL_TPL_)MULTI_BLK) += spl_multi_blk.o
+obj-$(CONFIG_$(SPL_TPL_)MULTI_FAT) += spl_multi_fat.o
 endif
