--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -75,6 +75,7 @@ CONFIG_SPL_SHOW_ERRORS=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_DM_BOOT_DEVICE=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
+CONFIG_SPL_LEGACY_IMAGE_FORMAT=y
 CONFIG_SPL_LEGACY_IMAGE_CRC_CHECK=y
 CONFIG_SYS_SPL_MALLOC=y
 CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
@@ -83,9 +84,10 @@ CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
 CONFIG_SPL_ENV_SUPPORT=y
 CONFIG_SPL_SAVEENV=y
-CONFIG_SPL_MULTI_MMC=y
 CONFIG_SPL_MMC_WRITE=y
-CONFIG_SPL_MULTI_MTD=y
+CONFIG_SPL_MULTI_BLK=y
+CONFIG_SPL_MULTI_FAT=y
+CONFIG_SPL_MULTI_UART=y
 CONFIG_SPL_SPINAND_SUPPORT=y
 CONFIG_SPL_DM_SPI_FLASH=y
 CONFIG_SPL_RAM_SUPPORT=y
@@ -93,7 +95,6 @@ CONFIG_SPL_RAM_DEVICE=y
 # CONFIG_SPL_SPI_FLASH_TINY is not set
 CONFIG_SPL_SPI_FLASH_MTD=y
 CONFIG_SPL_SPI_LOAD=y
-CONFIG_SPL_YMODEM_SUPPORT=y
 CONFIG_SPL_ATF=y
 CONFIG_SPL_ATF_LOAD_IMAGE_V2=y
 CONFIG_HUSH_PARSER=y
@@ -169,7 +170,6 @@ CONFIG_CMD_MTDPARTS_SPREAD=y
 CONFIG_CMD_MTDPARTS_SHOW_NET_SIZES=y
 CONFIG_CMD_AVB=y
 CONFIG_MMC_SPEED_MODE_SET=y
-# CONFIG_DOS_PARTITION is not set
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_OF_BOARD=y
@@ -191,8 +191,6 @@ CONFIG_BOOTCOUNT_LIMIT=y
 CONFIG_DM_BOOTCOUNT=y
 CONFIG_CLK=y
 CONFIG_SPL_CLK=y
-CONFIG_SPL_CLK_CCF=y
-CONFIG_CLK_CCF=y
 CONFIG_CLK_AXERA=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x3090000000
