configs: laguna: expand malloc size within zebu_defconfig

--- a/configs/lua-zebu_defconfig
+++ b/configs/lua-zebu_defconfig
@@ -4,6 +4,7 @@ CONFIG_POSITION_INDEPENDENT=y
 CONFIG_SYS_INIT_SP_BSS_OFFSET=262144
 # CONFIG_ARM64_SUPPORT_AARCH32 is not set
 CONFIG_ARCH_AXERA=y
+CONFIG_SYS_MALLOC_LEN=0x800000
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_NR_DRAM_BANKS=1
@@ -96,6 +97,7 @@ CONFIG_SYS_NS16550=y
 CONFIG_DW_UART_INIT=y
 CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED=y
 # CONFIG_SPL_USE_TINY_PRINTF is not set
+CONFIG_AES=y
 CONFIG_SHA1=y
 CONFIG_SHA256=y
 CONFIG_SHA384=y
