--- a/cmd/Makefile
+++ b/cmd/Makefile
@@ -194,6 +194,7 @@ obj-$(CONFIG_CMD_MBR) += mbr.o
 obj-$(CONFIG_CMD_ETHSW) += ethsw.o
 obj-$(CONFIG_CMD_AXI) += axi.o
 obj-$(CONFIG_CMD_PVBLOCK) += pvblock.o
+obj-$(CONFIG_CMD_BLOCK) += block.o
 
 # Power
 obj-$(CONFIG_CMD_PMIC) += pmic.o
