soc: laguna: Add FDL USB driver support

--- a/arch/arm/dts/laguna-qemu.dts
+++ b/arch/arm/dts/laguna-qemu.dts
@@ -124,6 +124,12 @@
 		};
 	};
 
+	fdl_usb_drv: fdl_usb_drv@0E200000 {
+		compatible = "fdl-usb-drv";
+		reg = <0x0 0x0E200000 0x0 0x100000>;
+		status = "disabled";
+	};
+
 	soc {
 		compatible = "simple-bus";
 		#address-cells = <2>;
